test/errhandling/psahabu/illegal-throw.chpl
proc illegalThrow() {
  throw new owned Error();
}

illegalThrow();
